samples/_failures_safe/1761140735_ddbfcf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a01319dd.c: In function ‘display_statistics’:
./samples/SAFE/__tmp_a01319dd.c:135:12: error: missing terminating " character
  135 |     printf("Total entries processed:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a01319dd.c:135:5: error: expected expression at end of input
  135 |     printf("Total entries processed:
      |     ^~~~~~
./samples/SAFE/__tmp_a01319dd.c:135:5: error: expected declaration or statement at end of input
